--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Build project with Maven
         run: mvn -B package --file pom.xml
     
-    publish-job:
+  build-docker-image:
       runs-on: ubuntu-latest
       needs:
         - build_and_test
